--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,6 +2,11 @@ pipeline{
     agent any
 
     stages{
+        stage('clean workspace'){
+            steps{
+                cleanWS()
+            }
+        }
         stage('git checkout') {
             steps {
                 git credentialsId: 'git-creds', url: 'https://github.com/surajntech/foodies.git'
