--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,5 +16,10 @@ pipeline{
                 sh 'mvn test'
             }
         }
+        stage('maven build') {
+            steps {
+                sh 'mvn clean verify'
+            }
+        }
     }
 }
